# rust-crlibm

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: main.yml
crlibm/: atan-itanium.c  crlibm_private.c  crlibm_private.h  csh_fast.c  double-extended.h  exp-itanium.c  log-de.c  log-de2.c  log-td.c  log.c  log10-td.c  log2-td.c  log2_accurate.c  log_fast.c  triple-double.h
crlibm/scs_lib/: addition_scs.c  zero_scs.c
crlibm/scs_lib/tests/: tbx_timing.h
examples/: accuracy.rs
src/: lib.rs
