[package]
name = "crlibm"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler"]
description = "Binding to CRlibm, a correctly rounded math lib"
homepage = "https://github.com/Chris00/rust-crlibm"
repository = "https://github.com/Chris00/rust-crlibm"
license = "GPL-2.0-or-later"
keywords = ["libm", "math", "floating-point", "rounding", "science"]
categories = ["mathematics"]
readme = "README.md"

[[example]]
name = "accuracy"
path = "examples/accuracy.rs"

[dependencies]

[build-dependencies]
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
