[package]
name = "crlibm"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler"]
description = "Binding to CRlibm, a correctly rounded math lib"
homepage = "https://github.com/Chris00/rust-crlibm"
repository = "https://github.com/Chris00/rust-crlibm"
documentation = "https://docs.rs/crlibm"
license = "GPL-2.0-or-later"
keywords = ["libm", "math", "floating-point", "rounding", "science"]
categories = ["mathematics", "api-bindings", "science"]
readme = "README.md"
exclude = ["Makefile*", "/.github",
  "/crlibm/docs", "/crlibm/gappa", "maple/", "/crlibm/tests",
  "/crlibm/**/NEWS", "/crlibm/**/README*", "/crlibm/**/TODO",
  "/crlibm/**/test*", "/crlibm/**/VERSION", "/crlibm/**/*.dev",
  "/crlibm/**/*.user", "/crlibm/**/*.dox", "/crlibm/CMakeLists.txt",
  "/crlibm/prepare", "/crlibm/**/ChangeLog"]

[[example]]
name = "accuracy"
path = "examples/accuracy.rs"

[dependencies]
ctor = "0.1.21"

[build-dependencies]
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
